# VitAnomalyDetection

./: README.md  pyproject.toml
apps/api/: package-lock.json
apps/api/src/dto/: run-inference.dto.ts
apps/api/src/inference/: inference.controller.ts  inference.service.ts
apps/api/src/serving/: postprocess.service.ts  preprocessing.service.ts  serving.controller.spec.ts  serving.controller.ts  serving.module.ts  serving.service.ts  session.manager.ts
apps/api/src/serving/profiles/: model.profile.ts  preprocess.profile.ts
apps/api/src/validators/: input-spec.validator.ts
configs/: ablation_mixmode_brats.yaml
src/AnomalyDetectionVit/: __init__.py
src/AnomalyDetectionVit/datas/: __init__.py  brats_dataset.py  brats_loader.py  msd.py
src/AnomalyDetectionVit/models/: __init__.py  attention.py  decoder.py  encoder.py  mlps.py  odevit.py  splitting.py  unet3d.py  vit_3d.py
src/AnomalyDetectionVit/models/dice/: __init__.py  dice.py
src/AnomalyDetectionVit/models/patching/: __init__.py  patching.py
src/AnomalyDetectionVit/scheduler/: __init__.py  lr.py
src/AnomalyDetectionVit/solvers/: __init__.py  rk.py
src/AnomalyDetectionVit/train/: dataset_test.py  eval.py  grid_train.py  grid_train_csv.py  t.py  test_json.py  train.py  train.yaml
src/AnomalyDetectionVit/utils/: __init__.py  ckpt.py  ckpt_util.py  constraint_util.py  metric_util.py  stage_util.py  train_config.py  util.py
